manifests/istio/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-gateway
  namespace: istio-ingress
spec:
  selector:
    istio: gateway
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: cropwise-garden-tls
    hosts:
    - "*.cropwise.garden"
  - port:
      number: 80
      name: http
      protocol: HTTP
    tls:
      httpsRedirect: true
    hosts:
    - "*.cropwise.garden"
  - port:
      number: 5432
      name: tcp-postgres
      protocol: TCP
    hosts:
    - "postgres.cropwise.garden"
