manifests/istio/argocd-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: argocd
  namespace: argocd
spec:
  hosts:
  - argocd.cropwise.garden
  gateways:
  - istio-ingress/istio-gateway
  http:
  - match:
    - uri:
        prefix: "/"
    route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
